Break out list item component and have checkbox working

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,10 @@ body {
   color: grey;
 }
 
+.material-icons {
+  overflow: hidden;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
