--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.footer {
+  color: lightgrey;
+}
